kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: varuhinja
spec:
  selector:
    app: varuhinja
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
